--- a/excursion/index.html
+++ b/excursion/index.html
@@ -2,12 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <nav exc>
       <a href="#">Download Excursion (Coming soon!)</a>
+    </nav>
+    <video src=“./resources/videos/excursion.mp4” width=“auto” height=“auto”> view not supported </video>
+    <h2>Your personal guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interes for you</p>
+    <p><img src="./resources/images/camp.jpeg" /></p>
+    <p><img src="./resources/images/phone.png" /></p>
+    <h3>Coming soon for iPhone and Android</h3>
+    <nav exc>
+      <a href="#">Download Excursion (Coming soon!)</a>
+    </nav>
+    <footer>
+      Excursion
+    </footer>
   </body>
 </html>
