--- a/excursion/index.html
+++ b/excursion/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <nav exc>
+    <nav>
       <a href="#">Download Excursion (Coming soon!)</a>
     </nav>
     <video src=“./resources/videos/excursion.mp4” width=“auto” height=“auto”> view not supported </video>
@@ -16,7 +16,7 @@
     <p><img src="./resources/images/camp.jpeg" /></p>
     <p><img src="./resources/images/phone.png" /></p>
     <h3>Coming soon for iPhone and Android</h3>
-    <nav exc>
+    <nav>
       <a href="#">Download Excursion (Coming soon!)</a>
     </nav>
     <footer>
