--- a/excursion/index.html
+++ b/excursion/index.html
@@ -10,10 +10,11 @@
     <nav>
       <a href="#">Download Excursion (Coming soon!)</a>
     </nav>
-    <video src=“./resources/videos/excursion.mp4” width=“auto” height=“auto”> view not supported </video>
+    <p>
+    <video src=“./resources/videos/excursion.mp4”> view not supported </video></p>
     <h2>Your personal guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interes for you</p>
-    <p><img src="./resources/images/camp.jpeg" /></p>
+    <p><img src="./resources/images/camp.jpg" /></p>
     <p><img src="./resources/images/phone.png" /></p>
     <h3>Coming soon for iPhone and Android</h3>
     <nav>
