--- a/excursion/index.html
+++ b/excursion/index.html
@@ -7,21 +7,19 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <nav>
       <a href="#">Download Excursion (Coming soon!)</a>
-    </nav>
     <p>
-    <video src=“./resources/videos/excursion.mp4”> view not supported </video></p>
+      <video autoplay="" muted="" loop="">
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
+          </video></p>
     <h2>Your personal guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interes for you</p>
     <p><img src="./resources/images/camp.jpg" /></p>
     <p><img src="./resources/images/phone.png" /></p>
-    <h3>Coming soon for iPhone and Android</h3>
-    <nav>
+    <h2>Coming soon for iPhone and Android</h2>
       <a href="#">Download Excursion (Coming soon!)</a>
-    </nav>
     <footer>
-      Excursion
+      &copy; Excursion
     </footer>
   </body>
 </html>
